# leashLink

./: .gitignore  README.md  TODO.md  docker-compose.yml  leashlink.code-workspace
Patemate-github-upload/: server.mjs  styles.css
app/: project.config.json  tsconfig.json
app/miniprogram/: app.json  app.wxss  project.config.json
app/miniprogram/components/AlertCard/: AlertCard.json  AlertCard.ts  AlertCard.wxss
app/miniprogram/components/BatteryView/: BatteryView.wxml
app/miniprogram/components/DeviceCard/: DeviceCard.wxss
app/miniprogram/components/MetricCard/: MetricCard.ts
app/miniprogram/components/StatusBadge/: StatusBadge.ts  StatusBadge.wxss
app/miniprogram/pages/analysis/: analysis.json  analysis.wxss
app/miniprogram/services/: device.ts  event.ts  realtime.ts
app/miniprogram/store/: deviceStore.ts
app/miniprogram/types/: index.ts
app/miniprogram/utils/: constants.ts
app/typings/wx/: index.d.ts
backend/: .env.example  .gitignore  CLOUD_DEPLOYMENT.md  README.md  requirements.txt
backend/app/: __init__.py  main.py  models.py
backend/app/api/: config.py  device.py  events.py  telemetry.py
backend/app/db/: postgres.py  postgres_repository.py  repository.py
backend/app/mqtt/: publisher.py  subscriber.py
backend/app/services/: config_service.py  device_service.py  event_service.py  session_service.py
firmware/collar_c5/: .gitignore  CMakeLists.txt  项目说明汇总.md
firmware/collar_c5/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  leashlink_types.h
firmware/collar_c5/main/board/: board_pins.h
firmware/collar_c5/main/communication/: ble_adv.c  ble_adv.h  espnow_handle.c  espnow_handle.h  i2c_bus.c  i2c_bus.h  wifi_manager.c  wifi_manager.h
firmware/collar_c5/main/drivers/: bmi270_espp_bridge.cpp  bmi270_espp_bridge.h  buzzer_driver.c  buzzer_driver.h  imu_driver.c  imu_driver.h  led_driver.c  led_driver.h  speaker_driver.c  speaker_driver.h  vibration_driver.c  vibration_driver.h
firmware/collar_c5/main/services/: feedback_service.c  feedback_service.h  motion_service.c  motion_service.h  power_service.c  power_service.h
firmware/collar_c5/main/tasks/: task_feedback.c  task_imu.c
firmware/handle_c3/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.old
firmware/handle_c3/board/: board_pins.h  power.c  power.h
firmware/handle_c3/communication/: ble_pairing.h  espnow_handle.c  espnow_handle.h  mqtt_client.c  mqtt_client.h
firmware/handle_c3/drivers/: buzzer_driver.h  gps_driver.h  hx711_driver.c  motor_driver.c  oled_driver.c  servo_driver.h
firmware/handle_c3/main/: CMakeLists.txt
firmware/handle_c3/services/: distance_service.h  safety_service.c  safety_service.h  tension_service.h
firmware/handle_c3/tasks/: ll_tasks.h  task_cloud.c  task_safety.c  task_tension.c  task_ui.c
firmware/handle_s3/: README.md  sdkconfig.defaults  sdkconfig.old
firmware/handle_s3/board/: board_pins.h  power.c  power.h
firmware/handle_s3/communication/: ble_pairing.c  espnow_handle.c  espnow_handle.h  i2c_bus.c  i2c_bus.h  ll_mqtt_client.h  mqtt_client.c  wifi_manager.c  wifi_manager.h
firmware/handle_s3/drivers/: button_driver.c  button_driver.h  buzzer_driver.c  gps_driver.c  heart_sensor.c  heart_sensor.h  hx711_driver.c  hx711_driver.h  light_sensor.c  light_sensor.h  motor_driver.c  motor_driver.h  oled_driver.c  oled_driver.h  servo_driver.c
firmware/handle_s3/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  leashlink_types.h
firmware/handle_s3/services/: cloud_service.c  cloud_service.h  distance_service.c  leash_control.c  leash_control.h  safety_service.c  session_service.c  session_service.h  tension_service.c
firmware/handle_s3/tasks/: ll_tasks.h  task_actuator.c  task_cloud.c  task_handle_modules.c  task_safety.c  task_sensor_board.c  task_tension.c  task_ui.c
frontend/Patemate-github-upload/: README.md  script.js
frontend/app/miniprogram/: app.ts  project.config.json  project.private.config.json
frontend/web_Patemate/: API.md  index.html  script.js  styles.css
infra/mosquitto/config/: mosquitto.conf
infra/mosquitto/data/: mosquitto.db
(+45 files in other folders)
